--- a/360style.css
+++ b/360style.css
@@ -8,6 +8,14 @@
     flex: 1;
 }
 
+html.a-fullscreen body {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+    width: 100%;
+}
+
 body {
 /*    background-image: url("Coyotes.jpg");
     background-repeat: no-repeat;
