--- a/360style.css
+++ b/360style.css
@@ -28,10 +28,12 @@ body {
     background: rgba(30, 30, 30, 0.75); 
     padding: 10px;
     text-align: right;
+    z-index: 10;
 }
 
 .base {
     display: flex;
+    z-index: 15;
 }
 
 .base > div {
