--- a/360style.css
+++ b/360style.css
@@ -10,16 +10,12 @@
 }
 
 
-body {
+/*body {
 /*    background-image: url("Coyotes.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100%;*/
-}
-
-.three60{
-
-}
+    background-size: 100% 100%;
+}*/
 
 .menu {
     position: fixed; 
