--- a/360style.css
+++ b/360style.css
@@ -1,3 +1,4 @@
+
 .flexb {
     display: flex;
     flex-direction: column;
@@ -10,7 +11,9 @@
 }
 
 
-/*body {
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 /*    background-image: url("Coyotes.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
