--- a/360style.css
+++ b/360style.css
@@ -2,7 +2,7 @@
 .flexb {
     display: flex;
     flex-direction: column;
-   /* min-height: 90vh;*/
+    min-height: 90vh;
     z-index: 1000;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
