--- a/360style.css
+++ b/360style.css
@@ -2,9 +2,8 @@
 .flexb {
     display: flex;
     flex-direction: column;
-    min-height: 90vh;
+    min-height: 95vh;
     z-index: 1000;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .content{
@@ -12,11 +11,9 @@
 }
 
 
-/*body {/*    background-image: url("Coyotes.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-}*/
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 
 .menu {
     position: fixed; 
