--- a/360style.css
+++ b/360style.css
@@ -50,4 +50,12 @@ body {
     font-size: 12px;
    }
 
+#checkin{
+    background-image: "./images/checkin.png";
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    color: #FFFFFF;
+}
+
    
