--- a/360style.css
+++ b/360style.css
@@ -16,6 +16,7 @@ body {
 }
 
 .menu {
+    flex: 0;
     position: fixed; 
     top: 0;
     left:0; 
@@ -27,11 +28,13 @@ body {
 }
 
 .descriptive {
+    flex: 2;
     position: inherit;
     z-index: 1000;
 }
 
 .base {
+    flex: 3;
     display: flex;
     z-index: 1000;
 }
