--- a/360style.css
+++ b/360style.css
@@ -45,7 +45,7 @@ body {
 
 .grid-compass {
     display: grid;
-    grid-template-columns: auto initial initial initial auto auto auto auto auto;
+    grid-template-columns: auto initial initial initial auto auto auto auto;
     grid-gap: 3px;
     background-color: rgb(128, 125, 124);
     padding: 3px;
