--- a/360style.css
+++ b/360style.css
@@ -60,37 +60,37 @@ body {
 
 .invtitle {
     grid-column-start: 6;
-    grid-column-end: 9;
+    grid-column-end: 7;
 }
 
 .invblank {
     grid-column-start: 6;
-    grid-column-end: 9;
+    grid-column-end: 7;
 }
 
 .slot1 {
     grid-column-start: 6;
-    grid-column-end: 9;
+    grid-column-end: 7;
 }
 
 .slot2 {
     grid-column-start: 6;
-    grid-column-end: 9;
+    grid-column-end: 7;
 }
 
 .slot3 {
     grid-column-start: 6;
-    grid-column-end: 9;
+    grid-column-end: 7;
 }
 
 .compassblank {
     grid-column-start: 2;
-    grid-column-end: 5;
+    grid-column-end: 3;
 }
 
-.gblank {
+/*.gblank {
 
-}
+}*/
 
 .compasscol1{
     min-width: 60px;
