--- a/360style.css
+++ b/360style.css
@@ -58,6 +58,7 @@ body {
     font-size: 12px;
    }
 
+/*   
 .invtitle {
     grid-column-start: 6;
     grid-column-end: 7;
@@ -91,7 +92,7 @@ body {
 /*.gblank {
 
 }*/
-
+*/
 .compasscol1{
     min-width: 60px;
 }
