--- a/360style.css
+++ b/360style.css
@@ -8,7 +8,7 @@
 
 .content{
     flex: 1 1 auto;
-    min-height: 70%;
+    min-height: 85%;
 }
 
 
@@ -46,7 +46,7 @@ body {
 
 .grid-compass {
     display: grid;
-    grid-template-columns: auto initial initial initial auto auto auto auto;
+    grid-template-columns: auto initial initial initial auto auto auto auto auto;
     grid-gap: 3px;
     background-color: rgb(128, 125, 124);
     padding: 3px;
