--- a/360style.css
+++ b/360style.css
@@ -49,7 +49,7 @@ body {
 
 .grid-compass {
     display: grid;
-    grid-template-columns: auto initial initial initial auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto auto auto auto;
     grid-gap: 3px;
     background-color: rgb(128, 125, 124);
     padding: 3px;
@@ -85,12 +85,12 @@ body {
 
 .slot3 {
     grid-column-start: 6;
-    grid-column-end: 7;
+    grid-column-end: 8;
 }
 
 .compassblank {
     grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-end: 5;
 }
 
 .gblank {
