--- a/360style.css
+++ b/360style.css
@@ -37,7 +37,7 @@ body {
     margin: 1%;
     border-radius: 15px;
     padding: 1%;
-    width: max-content;
+    width: fit-content;
 }
 
 .base {
@@ -62,6 +62,8 @@ body {
     border-radius: 15px;
     margin: 1%;
     min-width: fit-content;
+    min-height: fit-content;
+    height: max-content;
    }
 
 .grid-compass > div {
@@ -69,7 +71,7 @@ body {
     text-align: center;
     color:rgba(243, 243, 243, 0.8);
     font-size: 12px;
-    height: 60px;
+    height: max-content;
    }
 
 .compassbtn {
