--- a/360style.css
+++ b/360style.css
@@ -92,6 +92,13 @@ a {
     grid-column-end: 7;
 }
 
+.innervoice {
+    background-color: hotpink;
+    height: max-content;
+    color: #000;
+    z-index: 1000;
+}
+
 #checkin{
     background-repeat: no-repeat;
     background-attachment: fixed;
