--- a/360style.css
+++ b/360style.css
@@ -104,3 +104,15 @@ a {
     background-attachment: fixed;
     background-size: cover;
 }
+
+#lecture{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-size: cover;
+}
