--- a/360style.css
+++ b/360style.css
@@ -116,3 +116,24 @@ a {
     z-index: -1;
     background-size: cover;
 }
+
+.fadefromblack {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,1);
+    opacity: 1;
+    z-index: 9999;
+    animation: fadefromblack 4s ease-out forwards;
+}
+
+@keyframes fadefromblack {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
