--- a/360style.css
+++ b/360style.css
@@ -15,6 +15,11 @@
 body {
     background-color:#000;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    .prevent-select {
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
 }
 
 .menu {
