--- a/360style.css
+++ b/360style.css
@@ -111,6 +111,30 @@ a {
     }
 }
 
+.blackin {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,1);
+    opacity: 1;
+    z-index: 9999;
+    animation: blackin 3s ease-out forwards;
+    pointer-events: none;
+}
+
+@keyframes blackin {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+
 #innervoice {
     background-color: hotpink;
     height: max-content;
