--- a/360style.css
+++ b/360style.css
@@ -34,7 +34,14 @@ a {
 }
 
 .info {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 80%;
+    padding: 20px;
+    background-color: #f0f0f0;
+    text-align: center;
     z-index: 9999;
 }
 
