--- a/360style.css
+++ b/360style.css
@@ -8,21 +8,63 @@ a {
     text-decoration-line: none;
 }
 
-.flexb {
-    display: flex;
-    flex-direction: column;
-    min-height: 95vh;
-    z-index: 1000;
+.fadefromblack {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,1);
+    opacity: 1;
+    z-index: 9998;
+    animation: fadefromblack 7s ease-out forwards;
+    pointer-events: none;
 }
+
+@keyframes fadefromblack {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+.blackin {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,1);
+    opacity: 1;
+    z-index: 9998;
+    animation: blackin 3s ease-out forwards;
+    pointer-events: none;
+}
+
+@keyframes blackin {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
 
 .videoplay {
     z-index: 90;
 }
 
-.content {
-    flex: 1 1 auto;
-    position: relative;
-    min-height: 85%;
+.flexb {
+    display: flex;
+    /*flex-direction: column;*/
+    flex-wrap: wrap;
+    min-height: 95vh;
+    z-index: 1000;
 }
 
 .menu {
@@ -37,6 +79,12 @@ a {
     z-index: 1000;
 }
 
+.content {
+    flex: 1 1 auto;
+    position: relative;
+    min-height: 85%;
+}
+
 .info {
     position: absolute;
     top: 50%;
@@ -47,6 +95,57 @@ a {
     background-color: #f0f0f0;
     text-align: center;
     z-index: 9999;
+}
+
+.base {
+    margin-top: auto;
+    flex: 0 1 auto;
+    display: flex;
+    justify-content: space-between;
+    z-index: 1000;
+}
+
+/*
+.base > div {
+    background: rgba(30, 30, 30, 0.45);
+    width: auto;
+    height: 150px;
+} 
+*/
+
+.grid-compass {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(3, auto);
+    grid-gap: 3px;
+    background-color: rgb(128, 125, 124);
+    padding: 10px;
+    border-radius: 15px;
+   /* margin: 1%;
+    min-width: fit-content;
+    min-height: fit-content;
+    height: max-content;
+    /*max-width: 25%;*/
+}
+
+/*
+.grid-compass > div {
+    background-color: rgba(163, 167, 167);
+    text-align: center;
+    color: rgba(243, 243, 243, 0.8);
+    font-size: 12px;
+    height: max-content;
+}
+*/
+.compassbtn {
+   /* min-width: 30%;
+    margin: 2%;
+    height: 95%;
+    
+    */
+    border: 1px;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .descriptive {
@@ -60,34 +159,7 @@ a {
     width: fit-content;
 }
 
-.base {
-    margin-top: auto;
-    flex: 0 1 auto;
-    display: flex;
-    justify-content: space-between;
-    z-index: 1000;
-}
-
-.base > div {
-    background: rgba(30, 30, 30, 0.45);
-    width: auto;
-    height: 150px;
-}
-
-.grid-compass {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-gap: 3px;
-    background-color: rgb(128, 125, 124);
-    padding: 10px;
-    border-radius: 15px;
-    margin: 1%;
-    min-width: fit-content;
-    min-height: fit-content;
-    height: max-content;
-}
-
-.grid-compass > div {
+.inventory {
     background-color: rgba(163, 167, 167);
     text-align: center;
     color: rgba(243, 243, 243, 0.8);
@@ -95,16 +167,13 @@ a {
     height: max-content;
 }
 
-.compassbtn {
-    min-width: 30%;
-    margin: 2%;
-    height: 95%;
-}
 
 .invslot {
     grid-column-start: 5;
     grid-column-end: 7;
 }
+
+
 
 .fadefromblack {
     position: fixed;
