--- a/360style.css
+++ b/360style.css
@@ -84,6 +84,7 @@ a {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: black;
+    background-position: 15dvh;
 }
 
 .infoimage img {
