--- a/360style.css
+++ b/360style.css
@@ -158,7 +158,8 @@ a {
 
 .header > div {
     width: 100%;
-    background-color: DodgerBlue;
+    /*background-color: DodgerBlue;*/
+    background: rgba(30, 30, 30, 0.45);
 }
 
 .time {
