--- a/360style.css
+++ b/360style.css
@@ -94,10 +94,24 @@ a {
     object-fit: cover;
 }
 
+/*
 @media screen and (max-width: 990px) {
     .infoimage {
         background-position: 150dvh;
     }
+}
+*/
+
+@media all and (max-width: 900px) {
+    .infospace { flex: 4 0px; }
+    .content { order: 1; } 
+    .base { order: 2; }
+   }
+
+@media all and (max-width: 900px) {
+    .base { flex-direction: column; }
+    .grid-compass { order: 2}
+    .descriptive { order: 1}
 }
 
 
@@ -206,14 +220,18 @@ a {
 
 .base {
     margin-top: auto;
-    margin-bottom: 1%;
+    margin-bottom: 30px;
     flex: 0 1 auto;
     display: flex;
     justify-content: space-between;
     min-height: max-content;
     z-index: 1000;
+    position: fixed;
+    bottom: 0;
 }
 
+
+/*
 footer {
     margin-top: auto;
     margin-bottom: 1%;
@@ -224,8 +242,9 @@ footer {
     z-index: 1000;
     height: fit-content;
     position: fixed;
-    bottom@ 0;
+    bottom: 0;
 }
+*/
 
 /*
 .base > div {
@@ -239,7 +258,7 @@ footer {
     display: grid;
     grid-template-columns: repeat(4, auto);
     grid-template-rows: repeat(3, auto);
-    width: 20vw;
+    width: auto;
     grid-gap: 5px;
     background: rgba(30, 30, 30, 0.45);
     padding: 10px;
@@ -279,10 +298,11 @@ footer {
     background: rgba(30, 30, 30, 0.45);
     padding: 10px;
     border-radius: 15px;
-    width: 55vw;
+    width: auto;
     justify-content: last baseline;
     height: fit-content;
     margin-left: 5px;
+    margin-right: 5px;
     margin-bottom: 5px;
 }
 
@@ -396,6 +416,7 @@ footer {
 #infospace {
     min-height: 75%;
     max-height: 100%;
+    height: 100%;
 }
 
 #title {
