--- a/360style.css
+++ b/360style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #000;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: x-large;
 }
 
 a {
