--- a/images/deadLINE_files/360style.css
+++ b/images/deadLINE_files/360style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #000;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: large;
+    font-size: x-large;
 }
 
 a {
