--- a/360style.css
+++ b/360style.css
@@ -327,7 +327,7 @@ footer {
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 5px;
-    font: larger;
+    font: x-large;
 }
 
 .inventory {
