--- a/360style.css
+++ b/360style.css
@@ -173,7 +173,7 @@ a {
 
 .header {
     display: flex;
-    flex: auto;
+    flex-flow: row;
     background: rgba(30, 30, 30, 0.45);
     width: 100%;
     justify-content: space-between;
@@ -182,7 +182,6 @@ a {
 }
 
 .header > div {
-    /*background-color: DodgerBlue;*/
     background: rgba(30, 30, 30, 0.45);
     width: 100%;
 }
