--- a/360style.css
+++ b/360style.css
@@ -112,25 +112,26 @@ a {
     }
 }
 
+/*
 @media all and (max-width: 900px) {
-    .base {
-        flex-direction: column;
+    .base {      flex-direction: column;
     }
     .grid-compass {
         order: 2;
     }
     .descriptive {
         order: 1;
-        /*font-size: x-large;*/
+    /*font-size: x-large;
     }
     .descriptive #title {
         display: none;
     }
     .mtitle {
         display: block;
-        /*font-size: x-large;*/
+        /*font-size: x-large;
     }
 }
+*/
 
 
 /* Portrait orientation */
