--- a/360style.css
+++ b/360style.css
@@ -153,7 +153,7 @@ a {
         display: block;
         /*font-size: x-large;*/
     }
-    .descriptive, .innervoice, .time, .mtitle {
+    .descriptive, .time, .mtitle {
         font-size: 4vmin;
     }    
 
