--- a/360style.css
+++ b/360style.css
@@ -171,7 +171,11 @@ a {
 /* Landscape */
 @media screen and (orientation: landscape) {
     .descriptive {
-        font-size: 3.5vmin;
+        font-size: 3vmin;
+    }
+
+    .compassbtn {
+        font-size: 2.5vmin;
     }
 }
 
@@ -227,6 +231,7 @@ a {
     z-index: 1000;
     width: 100%;
     height: 5vh;
+    min-height: 50px;
 }
 
 .header {
@@ -241,7 +246,7 @@ a {
 /*
 .time { width: 20% }
 .mtitle { width: 60% }
-.menu { width: 20% }
+.menusection { width: 20% }
 */
 
 .header > div {
@@ -260,7 +265,11 @@ a {
     padding-left: 10px;
 }
 
-.menu {
+.menubacker {
+    pointer-events: none;
+}
+
+.menusection {
     flex: 0 1 auto;
     width: auto;
     padding: 5px;
@@ -269,6 +278,35 @@ a {
     justify-content: right;
     display: block;
 }
+
+.menudrop {
+    position: relative;
+    top:auto;
+    color: rgba(255, 255, 255, 0.9);
+    background: rgba(30, 30, 30, 0.45);
+    z-index: 1000;
+    text-align: left;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    display: none;
+}
+
+.menudrop li {
+    /*flex-grow: 1;*/
+    list-style: none;
+    padding-right: 2vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    width:fit-content;
+
+}
+
+.unavailable {
+    pointer-events: none;
+    opacity: 0.5;
+    color: rgb(94, 94, 94);
+}
+
 
 .mtitle {
     /*font-size: x-large;*/
