--- a/360style.css
+++ b/360style.css
@@ -150,13 +150,15 @@ a {
         display: none;
     }
 
+    /*
     .time {
         font-size: 5vmin;
     }
+    */
 
     .mtitle {
         display: block;
-        font-size: 5vmin;
+       /* font-size: 5vmin;*/
     }
     .descriptive, .compassbtn {
         font-size: 4vmin;
@@ -220,6 +222,7 @@ a {
     justify-content: space-between;
     height: auto;
     z-index: 1000;
+    padding-left: 10px;
 }
 
 .menubacker {
@@ -262,6 +265,8 @@ a {
     width: auto;
     padding-top: 10px;
     padding-left: 10px;
+    min-width: 15vh;
+    font-size: 2.5vh;
 }
 
 .menubacker {
@@ -276,6 +281,7 @@ a {
     z-index: 1000;
     justify-content: right;
     display: block;
+    min-width: 15vh;
 }
 
 .menudrop {
@@ -317,7 +323,10 @@ a {
     display: block;
     width: auto;
     padding-top: 10px;
+    padding-left: 10px;
     justify-content: center;
+    text-align: center;
+    font-size: 2.5vh;
 }
 
 .content {
